Fixed about lead alignment

--- a/src/assets/scss/_aboutlead.scss
+++ b/src/assets/scss/_aboutlead.scss
@@ -21,6 +21,10 @@
        }
     }
 
+    .self-centre {
+        align-self: center;
+    }
+
     .about-lead-circle {
         width: 100%;
         height: 100%;
@@ -79,6 +83,7 @@
     .about-lead-circle-container {
         // padding-right: 80px;
         position: relative;
+        margin-top: 36px;
     }
 
     .circle-flag {
